--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="HTML, CSS, JavaScript, React"/>
     <title>Master</title>
 </head>
 <body>
+<h1>Hello!</h1>
 </body>
 </html>
