--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
         <title>Master</title>
     </head>
     <body>
-        <h1>Hello!</h1>
+        <p id="Monday">Monday</p>
+        <p id="Tuesday">Tuesday</p>
+        <p id="Wednesday">Wednesday</p>
+        <script type="module" src="src/scripts/main.js"></script>
     </body>
 </html>
