--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="HTML, CSS, JavaScript, React"/>
-    <title>Master</title>
+    <title>Lesson-6</title>
 </head>
 <body>
 <h1>Hello!</h1>
+<script src="script/main.js"></script>
 </body>
 </html>
