--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="HTML, CSS, JavaScript, React"/>
-    <title>Master</title>
-</head>
-<body>
-<h1>Hello!</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="keywords" content="HTML, CSS, JavaScript, React" />
+        <link rel="stylesheet" href="script/styles.css" />
+        <title>Lesson-6</title>
+    </head>
+    <body>
+        <h1>Hello!</h1>
+        <div class="click">
+            <div class="buttonClick">
+                <input id="button" type="submit" value="Click" /><input />
+                <img
+                    src="img/package-lock.jpg"
+                    id="image"
+                    alt="some stuff"
+                    width="200"
+                    height="200"
+                />
+                <img src="img/black.png" alt="some" />
+            </div>
+            <h2 id="lorem">
+                Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum
+                Lorem Ipsum Lorem Ipsum
+            </h2>
+        </div>
+        <div class="second-ex">
+            <form action="">
+                <input type="text" class="input-text" id="input-text" />
+                <div class="text-block" id="text-block">...</div>
+            </form>
+        </div>
+        <div class="third-ex">
+            <div class="container">
+                <h2>Объект event</h2>
+                <h3>Список задач</h3>
+                <ul id="list">
+                    <li>Закончить обучающее видео</li>
+                    <li>Написать резюме</li>
+                    <li>Принять отказы</li>
+                    <li>Найти работу</li>
+                </ul>
+            </div>
+        </div>
+        <script src="script/main.js"></script>
+    </body>
 </html>
